--- a/templates/views/weather.hbs
+++ b/templates/views/weather.hbs
@@ -15,11 +15,14 @@ body {
 }
 
 .main_header {
-    margin-top: 10px;
+    margin-top: 8rem;
     background: rgba(255, 255, 255, 0.1);
     padding: 10px;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    width: 40%;
+    display: flex;
+    justify-content: center;
 }
 
 .main_content form {
@@ -69,9 +72,8 @@ body {
 /* Weather Information Display */
 .tempInformation {
     margin-top: 30px;
-    margin-left: 30rem;
     margin-right: 30rem;
-    width:  center;
+    width:  80%;
     padding: 25px;
     background: rgba(255, 255, 255, 0.2);
     border-radius: 10px;
@@ -127,13 +129,14 @@ body {
     justify-content: space-around; /* Pushes items to opposite corners */
     align-items: center; /* Vertically centers them */
     width: 100%; /* Ensure it takes the full width of the parent container */
-    padding: 0 10px; /* Add some padding if needed */
+    height: 100px;
+    padding: 0 0px; /* Add some padding if needed */
     background: rgba(255, 255, 255, 0.2);
     border-radius: 15px;
 }
 
 #temp {
-    font-size: 5.5rem; /* Customize size */
+    font-size: 50px; /* Customize size */
     text-align: left;
 }
 
