--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -25,7 +25,7 @@ body {
                 <!-- left side div  -->
                 <div class="col-md-6 col-12 main_header_right align-items-center" >
                     <figure>
-                      <img src="images/profile.png" alt="ProfilePicture" class="img-fluid" title="Atharva Nevgi">
+                      <img src="images/profile.png" alt="ProfilePicture" class="img-fluid" title="Atharva Nevgi" style="border-radius: 8%;">
                     </figure>
                 </div>
                 <!-- right side div  -->
