--- a/templates/partials/navbar.hbs
+++ b/templates/partials/navbar.hbs
@@ -4,7 +4,7 @@
                 <nav class="navbar navbar-expand-lg">
                     <a class="navbar-brand" href="#"><i class="fa-solid fa-snowflake" style="color: #74C0FC;"></i> Ez_Weather <i class="fa-solid fa-snowflake" style="color: #74C0FC;"></i></a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                      <span class="navbar-toggler-icon"></span>
+                        <i class="fa-solid fa-bars"></i>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                       <ul class="navbar-nav ml-auto">
